tests/spec/format/snapshots/comment_between_select_arms.snap
---
source: tests/spec/format/mod.rs
description: |-
  fn f(c: Channel<int>) -> int {
    select {
      match c.receive() {
        Some(v) => v,
        None => 0,
      },
      // between select arms
      _ => 1,
    }
  }
---
fn f(c: Channel<int>) -> int {
  select {
    match c.receive() {
      Some(v) => v,
      None => 0,
    },
    // between select arms
    _ => 1,
  }
}
