tests/spec/format/snapshots/comment_between_statements.snap
---
source: tests/spec/format/mod.rs
description: |-
  fn foo() {
    let x = 1;
    // comment between
    let y = 2;
  }
---
fn foo() {
  let x = 1
  // comment between
  let y = 2
}
