tests/spec/format/snapshots/comment_between_value_enum_variants.snap
---
source: tests/spec/format/mod.rs
description: "input: pub enum E: int {\n  A = 1,\n  // between\n  B = 2,\n}"
---
pub enum E: int {
  A = 1,
  // between
  B = 2,
}
