tests/spec/format/snapshots/comment_blank_line_below_leading_in_enum.snap
---
source: tests/spec/format/mod.rs
description: |-
  enum E {
    A,
    // about B
  
    B,
  }
---
enum E {
  A,
  // about B

  B,
}
