tests/spec/format/snapshots/comment_blank_line_below_leading_in_interface.snap
---
source: tests/spec/format/mod.rs
description: |-
  interface I {
    fn first()
    // about second
  
    fn second()
  }
---
interface I {
  fn first()
  // about second

  fn second()
}
