tests/spec/format/snapshots/comment_blank_line_below_leading_in_match.snap
---
source: tests/spec/format/mod.rs
description: |-
  fn f(x: int) -> int {
    match x {
      1 => 1,
      // about 2
  
      2 => 2,
      _ => 0,
    }
  }
---
fn f(x: int) -> int {
  match x {
    1 => 1,
    // about 2

    2 => 2,
    _ => 0,
  }
}
