tests/spec/format/snapshots/comment_blank_line_below_leading_in_struct.snap
---
source: tests/spec/format/mod.rs
description: |-
  struct S {
    a: int,
    // about b
  
    b: int,
  }
---
struct S {
  a: int,
  // about b

  b: int,
}
