tests/spec/format/snapshots/comment_blank_line_preserved_between_struct_field_groups.snap
---
source: tests/spec/format/mod.rs
description: |-
  struct S {
    x: int, // trailing
  
    // second
    y: int,
  }
---
struct S {
  x: int, // trailing

  // second
  y: int,
}
