tests/spec/format/snapshots/comment_blank_line_preserved_between_top_level_comments.snap
---
source: tests/spec/format/mod.rs
description: |-
  fn a() {}
  // first
  
  // second
  fn b() {}
---
fn a() {}

// first

// second
fn b() {}
