tests/spec/format/snapshots/comment_groups_with_blank_line.snap
---
source: tests/spec/format/mod.rs
description: |-
  // first group
  
  // second group
  fn foo() {}
---
// first group

// second group
fn foo() {}
