tests/spec/format/snapshots/comment_leading.snap
---
source: tests/spec/format/mod.rs
description: |-
  // leading comment
  fn foo() {}
---
// leading comment
fn foo() {}
